# NetAssistant

./: .gitignore  Cargo.toml  LICENSE  README-en.md  README-zh.md  README.md  build.rs  decoder_system_design.md  decoder_system_explanation.md  netassistant.desktop
.github/workflows/: release.yml  winget-publish.yml
.trae/documents/: NetAssistant 解码器系统实现计划.md
skills/gpui-event/: SKILL.md
skills/gpui-scroll/: SKILL.md
src/: app.rs  assets.rs  custom_icons.rs  export.rs  log_writer.rs  main.rs  message.rs  theme_detector.rs  theme_event_handler.rs  theme_manager.rs
src/config/: connection.rs  mod.rs  storage.rs
src/core/: message_processor.rs  mod.rs  network_manager.rs  state.rs  tab_manager.rs
src/network/: events.rs  interfaces.rs  mod.rs
src/network/connection/: manager.rs
src/network/message/: error.rs  mod.rs  sender.rs
src/network/protocol/: decoder.rs  mod.rs  tcp.rs  udp.rs
src/ui/: connection_panel.rs  connection_tab.rs  main_window.rs  mod.rs  tab_container.rs
src/ui/components/: input_with_mode.rs  mod.rs
src/ui/dialog/: add_client.rs  decoder_selection.rs  favorite_list.rs  favorite_remark.rs  mod.rs  new_connection.rs
src/ui/state/: view_model.rs
src/utils/: hex.rs  mod.rs  text_measurement.rs
themes/: ayu-dark.json  custom-theme.json  na-theme.json
