[package]
name = "netassistant"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
winres = "0.1"

[package.metadata.appimage]
name = "NetAssistant"
comment = "多协议网络调试工具"
icon = "assets/icon_256x256.png"
categories = ["Development", "Network"]
terminal = false