[package]
name = "netassistant"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
tokio-serde = "0.8"
hex = "0.4"
log = "0.4"
simple_logger = "4.0"
textwrap = "0.16"
rust-embed = "8.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winreg", "handleapi", "synchapi", "winerror", "minwinbase"] }

[build-dependencies]
winres = "0.1"

[package.metadata.appimage]
name = "NetAssistant"
comment = "多协议网络调试工具"
icon = "assets/icon/icon_256x256.png"
categories = ["Development", "Network"]
terminal = false

